==> aws/amazon-freertos/vendors/nordic/boards/nrf52840-dk/ports/ble/iot_ble_hal_gatt_server.c <==
#include "iot_config.h"
#include <string.h>
#include "bt_hal_manager_adapter_ble.h"
#include "bt_hal_manager.h"
#include "bt_hal_gatt_server.h"
#include "iot_ble_hal_internals.h"
#include "ble.h"
#include "ble_srv_common.h"
#include "nrf_sdh.h"
#include "nrf_sdh_ble.h"
#include "nrf_log.h"
#include "nrf_ble_gatt.h"
#include "iot_ble_hal_dis.h"
#define GATT_MAX_ENTITIES    30

BTStatus_t prvBTGattServerInit( const BTGattServerCallbacks_t * pxCallbacks )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    ret_code_t xErrCode = nrf_ble_gatt_init( &xGattHandler, NULL );

    if( xErrCode == NRF_SUCCESS )
    {
        bGattInitialized = true;
    }

    xStatus = BTNRFError( xErrCode );

    if( xStatus == eBTStatusSuccess )
    {
        if( pxCallbacks != NULL )
        {
            xGattServerCb = *pxCallbacks;
        }
        else
        {
            xStatus = eBTStatusParamInvalid;
        }
    }

    return xStatus;
}

BTStatus_t prvBTAddService( uint8_t ucServerIf,
                            BTGattSrvcId_t * pxSrvcId,
                            uint16_t usNumHandles )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    ret_code_t xErrCode = NRF_SUCCESS;

    ble_uuid_t ble_uuid;

    /* Try to use GATT server without observers notification */
    /* ble_cus_t * p_cus = &m_cus; */

    /* Initialize service structure */
    /* p_cus->evt_handler = NULL; */
    /* p_cus->conn_handle = BLE_CONN_HANDLE_INVALID; */

    xErrCode = prvAFRUUIDtoNordic( &pxSrvcId->xId.xUuid, &ble_uuid );

    if( xErrCode == NRF_SUCCESS )
    {
        if( xGattTableSize == GATT_MAX_ENTITIES - 1 )
        {
            xErrCode = NRF_ERROR_NO_MEM;
        }
        else
        {
            xGattTable[ xGattTableSize ].type = GATT_SERVICE;
            xGattTable[ xGattTableSize ].parent_handle = 0;
            xGattTable[ xGattTableSize ].uuid = ble_uuid;
            xGattTable[ xGattTableSize ].handle = xGattTableSize == 0 ? 1 : xGattTable[ xGattTableSize - 1 ].handle + 1;
            xGattTableSize += 1;
        }
    }

    BT_NRF_PRINT_ERROR( xGattTableAdd, xErrCode );

    if( xErrCode == NRF_SUCCESS )
    {
        if( xGattServerCb.pxServiceAddedCb )
        {
            xGattServerCb.pxServiceAddedCb( xStatus, ulGattServerIFhandle, pxSrvcId, xGattTable[ xGattTableSize - 1 ].handle );
        }

        NRF_LOG_INFO( "Service Added to HAL table with handle %d %x \n\r ", xGattTable[ xGattTableSize - 1 ].handle );
    }

    xStatus = BTNRFError( xErrCode );

    return xStatus;
}

BTStatus_t prvBTAddCharacteristic( uint8_t ucServerIf,
                                   uint16_t usServiceHandle,
                                   BTUuid_t * pxUuid,
                                   BTCharProperties_t xProperties,
                                   BTCharPermissions_t xPermissions )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    ret_code_t xErrCode = NRF_SUCCESS;
    ble_add_char_params_t add_char_params;
    ble_uuid_t ble_uuid;

    xErrCode = prvBTbuildCharacteristic( pxUuid, xPermissions, xProperties, &add_char_params, &ble_uuid );

    if( xErrCode == NRF_SUCCESS )
    {
        if( xGattTableSize == GATT_MAX_ENTITIES - 1 )
        {
            xErrCode = NRF_ERROR_NO_MEM;
        }
        else
        {
            xGattTable[ xGattTableSize ].type = GATT_CHAR;
            xGattTable[ xGattTableSize ].parent_handle = UINT16_MAX;

            for( int i = 0; i < xGattTableSize; ++i )
            {
                if( ( xGattTable[ i ].type == GATT_SERVICE ) && ( xGattTable[ i ].handle == usServiceHandle ) )
                {
                    xGattTable[ xGattTableSize ].parent_handle = xGattTable[ i ].handle;
                    break;
                }
            }

            if( xGattTable[ xGattTableSize ].parent_handle == UINT16_MAX )
            {
                xErrCode = NRF_ERROR_INVALID_PARAM;
            }
            else
            {
                xGattTable[ xGattTableSize ].uuid = ble_uuid;
                xGattTable[ xGattTableSize ].handle = xGattTableSize == 0 ? 1 : xGattTable[ xGattTableSize - 1 ].handle + 2;
                xGattTable[ xGattTableSize ].properties.char_properties = add_char_params;
                xGattTableSize += 1;
            }
        }
    }

    BT_NRF_PRINT_ERROR( characteristic_add, xErrCode );

    if( xErrCode == NRF_SUCCESS )
    {
        NRF_LOG_INFO( "Charachtersitics Added to HAL table with handle %d %x \n\r", xGattTable[ xGattTableSize - 1 ].handle );

        if( xGattServerCb.pxCharacteristicAddedCb )
        {
            xGattServerCb.pxCharacteristicAddedCb( xStatus,
                                                   ulGattServerIFhandle,
                                                   pxUuid,
                                                   xGattTable[ xGattTableSize - 1 ].parent_handle,
                                                   xGattTable[ xGattTableSize - 1 ].handle );
        }
    }

    return BTNRFError( xErrCode );
}

BTStatus_t prvBTSetVal( BTGattResponse_t * pxValue )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    ble_gatts_value_t xValueParams;
    ret_code_t xErrCode;

    memset( &xValueParams, 0, sizeof( xValueParams ) );
    xValueParams.len = pxValue->xAttrValue.xLen;
    xValueParams.offset = pxValue->xAttrValue.usOffset;
    xValueParams.p_value = pxValue->xAttrValue.pucValue;

    xErrCode = sd_ble_gatts_value_set( usGattConnHandle, prvGattToSDHandle( pxValue->usHandle ), &xValueParams );

    if( xErrCode != NRF_SUCCESS )
    {
        NRF_LOG_ERROR( "Error %d HVX \n\r", xErrCode );
    }

    xStatus = BTNRFError( xErrCode );
    return xStatus;
}

BTStatus_t prvBTAddDescriptor( uint8_t ucServerIf,
                               uint16_t usServiceHandle,
                               BTUuid_t * pxUuid,
                               BTCharPermissions_t xPermissions )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    ret_code_t xErrCode = NRF_SUCCESS;
    ble_uuid_t ble_uuid;
    ble_add_descr_params_t xDescrParams;

    xErrCode = prvBTbuildDescriptor( pxUuid, xPermissions, &xDescrParams, &ble_uuid );

    if( xErrCode == NRF_SUCCESS )
    {
        if( xGattTableSize == GATT_MAX_ENTITIES - 1 )
        {
            xErrCode = NRF_ERROR_NO_MEM;
        }
        else
        {
            xGattTable[ xGattTableSize ].type = GATT_DESCR;
            /* We sets the parent of the descriptor to be the latest added characteristic which belongs to the given service */
            xGattTable[ xGattTableSize ].parent_handle = UINT16_MAX;
            uint16_t usParentNumber = UINT16_MAX;

            for( int16_t i = ( int16_t ) xGattTableSize - 1; i >= 0; --i )
            {
                if( ( xGattTable[ i ].type == GATT_CHAR ) && ( xGattTable[ i ].parent_handle == usServiceHandle ) )
                {
                    usParentNumber = i;
                    xGattTable[ xGattTableSize ].parent_handle = xGattTable[ i ].handle;
                    break;
                }
            }

            /* Set the correct permissions for the responding characteristics CCCD
             * It cannot be SEC_NO_ACCESS as CCCD should always be readable and writable
             */
            if( ( ble_uuid.type == BLE_UUID_TYPE_BLE ) &&
                ( ble_uuid.uuid == BLE_UUID_DESCRIPTOR_CLIENT_CHAR_CONFIG ) &&
                ( usParentNumber != UINT16_MAX ) )
            {
                if( xDescrParams.write_access == SEC_NO_ACCESS )
                {
                    xGattTable[ usParentNumber ].properties.char_properties.cccd_write_access = MAX( SEC_OPEN, xDescrParams.read_access );
                }
                else
                {
                    xGattTable[ usParentNumber ].properties.char_properties.cccd_write_access = xDescrParams.write_access;
                }
            }

            if( xGattTable[ xGattTableSize ].parent_handle == UINT16_MAX )
            {
                xErrCode = NRF_ERROR_INVALID_PARAM;
            }
            else
            {
                xGattTable[ xGattTableSize ].uuid = ble_uuid;
                xGattTable[ xGattTableSize ].handle = xGattTableSize == 0 ? 1 : xGattTable[ xGattTableSize - 1 ].handle + 1;
                xGattTable[ xGattTableSize ].properties.descr_properties = xDescrParams;
                xGattTableSize += 1;
            }
        }
    }

    BT_NRF_PRINT_ERROR( xGattTableDescr, xErrCode );

    xStatus = BTNRFError( xErrCode );

    if( xStatus == eBTStatusSuccess )
    {
        NRF_LOG_INFO( "Descr Added to HAL table with handle %d %x \n\r", xGattTable[ xGattTableSize - 1 ].handle );

        if( xGattServerCb.pxDescriptorAddedCb )
        {
            xGattServerCb.pxDescriptorAddedCb( xStatus,
                                               ulGattServerIFhandle,
                                               pxUuid,
                                               usServiceHandle,
                                               xGattTable[ xGattTableSize - 1 ].handle );
        }
    }

    return xStatus;
}

BTStatus_t prvBTStartService( uint8_t ucServerIf,
                              uint16_t usServiceHandle,
                              BTTransport_t xTransport )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    ret_code_t xErrCode = NRF_SUCCESS;
    uint16_t usCurrentServiceNumber = UINT16_MAX;

    for( uint16_t i = 0; i < xGattTableSize; ++i )
    {
        if( ( xGattTable[ i ].type == GATT_SERVICE ) && ( xGattTable[ i ].handle == usServiceHandle ) )
        {
            usCurrentServiceNumber = i;
            break;
        }
    }

    if( usCurrentServiceNumber == UINT16_MAX )
    {
        xErrCode = NRF_ERROR_INVALID_PARAM;
    }

    if( xErrCode == NRF_SUCCESS )
    {
        xErrCode = sd_ble_gatts_service_add( BLE_GATTS_SRVC_TYPE_PRIMARY,
                                             &xGattTable[ usCurrentServiceNumber ].uuid,
                                             &xGattToSDMapping[ xGattMappingTablesSize ].softdevice_handle );
        xGattToSDMapping[ xGattMappingTablesSize ].handle = usServiceHandle;
        xGattMappingTablesSize += 1;
    }

    BT_NRF_PRINT_ERROR( prvBTStartService, xErrCode );

    if( xErrCode == NRF_SUCCESS )
    {
        NRF_LOG_INFO( "Service Added to SD table with handle %d %x \n\r ",
                      xGattToSDMapping[ xGattMappingTablesSize - 1 ].softdevice_handle );

        xErrCode = prvStartServiceAddCharacteristics( usCurrentServiceNumber );
    }

    xStatus = BTNRFError( xErrCode );

    if( xGattServerCb.pxServiceStartedCb != NULL )
    {
        xGattServerCb.pxServiceStartedCb( xStatus, ucServerIf, usServiceHandle );
    }

    return xStatus;
}

BTStatus_t prvBTSendIndication( uint8_t ucServerIf,
                                uint16_t usAttributeHandle,
                                uint16_t usConnId,
                                size_t xLen,
                                uint8_t * pucValue,
                                bool bConfirm )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    uint32_t err;
    uint16_t len;

    ble_gatts_hvx_params_t hvx_params;

    memset( &hvx_params, 0, sizeof( hvx_params ) );
    hvx_params.handle = prvGattToSDHandle( usAttributeHandle );
    hvx_params.p_data = pucValue;
    len = xLen;
    hvx_params.p_len = &len;

    if( bConfirm )
    {
        hvx_params.type = BLE_GATT_HVX_INDICATION;
    }
    else
    {
        hvx_params.type = BLE_GATT_HVX_NOTIFICATION;
    }

    err = sd_ble_gatts_hvx( usConnId, &hvx_params );

    if( err != 0 )
    {
        xStatus = eBTStatusFail;
        NRF_LOG_ERROR( 0, "Error %d HVX \n\r", err );
    }

    return xStatus;
}

BTStatus_t prvBTSendResponse( uint16_t usConnId,
                              uint32_t ulTransId,
                              BTStatus_t xStatus,
                              BTGattResponse_t * pxResponse )
{
    BTStatus_t xReturnStatus = eBTStatusSuccess;
    ret_code_t xErrCode = NRF_SUCCESS;
    ble_gatts_rw_authorize_reply_params_t authreply;

    ble_gatts_value_t writereply;

    switch( ulTransId )
    {
        case BLE_GATTS_AUTHORIZE_TYPE_READ:
            authreply.type = BLE_GATTS_AUTHORIZE_TYPE_READ;

            authreply.params.read.len = pxResponse->xAttrValue.xLen;
            authreply.params.read.offset = pxResponse->xAttrValue.usOffset;
            authreply.params.read.p_data = pxResponse->xAttrValue.pucValue;

            authreply.params.read.update = 1; /* NOTE: This flag is considered only on write event */

            if( xStatus == eBTStatusSuccess )
            {
                authreply.params.read.gatt_status = BLE_GATT_STATUS_SUCCESS;
            }
            else
            {
                authreply.params.read.gatt_status = BLE_GATT_STATUS_ATTERR_READ_NOT_PERMITTED;
            }

            xErrCode = sd_ble_gatts_rw_authorize_reply( usConnId, &authreply );

            if( xErrCode != 0 )
            {
                NRF_LOG_ERROR( "Error %d prvBTSendResponse - BLE_GATTS_AUTHORIZE_TYPE_READ \n\r", xErrCode );
            }

            break;

        case BLE_GATTS_AUTHORIZE_TYPE_WRITE:
            authreply.type = BLE_GATTS_AUTHORIZE_TYPE_WRITE;

            authreply.params.write.len = pxResponse->xAttrValue.xLen;
            authreply.params.write.offset = pxResponse->xAttrValue.usOffset;
            authreply.params.write.p_data = pxResponse->xAttrValue.pucValue;

            authreply.params.write.update = 1;

            if( xStatus == eBTStatusSuccess )
            {
                authreply.params.write.gatt_status = BLE_GATT_STATUS_SUCCESS;
            }
            else
            {
                authreply.params.write.gatt_status = BLE_GATT_STATUS_ATTERR_WRITE_NOT_PERMITTED;
            }

            xErrCode = sd_ble_gatts_rw_authorize_reply( usConnId, &authreply );

            if( xErrCode != NRF_SUCCESS )
            {
                NRF_LOG_ERROR( "Error %d prvBTSendResponse - BLE_GATTS_AUTHORIZE_TYPE_WRITE \n\r", xErrCode );
            }

            break;

        case 0:
            xStatus = eBTStatusSuccess;

            break;

        default:
            ;
    }

    xReturnStatus = BTNRFError( xErrCode );

    if( xGattServerCb.pxResponseConfirmationCb != NULL )
    {
        xGattServerCb.pxResponseConfirmationCb( xStatus, pxResponse->usHandle );
    }

    return xReturnStatus;
}

static BTStatus_t prvBTConfigureMtu( uint8_t ucServerIf,
                                     uint16_t usMtu )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    ret_code_t xNRFstatus = NRF_SUCCESS;

    nrf_ble_gatt_t * pxGattHandler = prvGetGattHandle();

    xNRFstatus = nrf_ble_gatt_att_mtu_periph_set( pxGattHandler, usMtu );
    xStatus = BTNRFError( xNRFstatus );
    return xStatus;
}
