==> aws/amazon-freertos/vendors/espressif/boards/ports/ble/bluedroid/iot_ble_hal_gatt_server.c <==
#include "iot_config.h"
#include <string.h>
#include "esp_gatts_api.h"
#include "esp_gap_ble_api.h"
#include "esp_gatt_common_api.h"
#include "bt_hal_manager_adapter_ble.h"
#include "bt_hal_manager.h"
#include "bt_hal_gatt_server.h"
#include "iot_ble_hal_internals.h"
#define APP_ID    0

BTStatus_t prvBTGattServerInit( const BTGattServerCallbacks_t * pxCallbacks )
{
    BTStatus_t xStatus = eBTStatusSuccess;


    if( pxCallbacks != NULL )
    {
        xGattServerCb = *pxCallbacks;
    }
    else
    {
        xStatus = eBTStatusParamInvalid;
    }

    if( xStatus == eBTStatusSuccess )
    {
        if( esp_ble_gatts_register_callback( prvGATTeventHandler ) != ESP_OK )
        {
            xStatus = eBTStatusFail;
        }
    }

    return xStatus;
}

BTStatus_t prvBTAddService( uint8_t ucServerIf,
                            BTGattSrvcId_t * pxSrvcId,
                            uint16_t usNumHandles )
{
    esp_gatt_srvc_id_t xService;
    esp_err_t xESPstatus = ESP_OK;
    BTStatus_t xStatus = eBTStatusSuccess;

    if( pxSrvcId->xServiceType == eBTServiceTypePrimary )
    {
        xService.is_primary = true;
    }
    else
    {
        xService.is_primary = false;
    }

    xService.id.inst_id = pxSrvcId->xId.ucInstId;

    prvCopytoESPUUID( &xService.id.uuid, &pxSrvcId->xId.xUuid );


    xESPstatus = esp_ble_gatts_create_service( ucServerIf, &xService, usNumHandles );

    if( xESPstatus != ESP_OK )
    {
        xStatus = eBTStatusFail;
    }

    return xStatus;
}

BTStatus_t prvBTAddCharacteristic( uint8_t ucServerIf,
                                   uint16_t usServiceHandle,
                                   BTUuid_t * pxUuid,
                                   BTCharProperties_t xProperties,
                                   BTCharPermissions_t xPermissions )
{
    esp_bt_uuid_t xCharUUID;
    esp_attr_value_t xCharVal;
    esp_attr_control_t xControl;
    esp_err_t xESPstatus = ESP_OK;
    BTStatus_t xStatus = eBTStatusSuccess;

    prvCopytoESPUUID( &xCharUUID, pxUuid );

    xControl.auto_rsp = ESP_GATT_RSP_BY_APP;

    xCharVal.attr_len = 0;
    xCharVal.attr_max_len = 0;
    xCharVal.attr_value = NULL;

    xESPstatus = esp_ble_gatts_add_char( usServiceHandle, &xCharUUID, ( esp_gatt_perm_t ) xPermissions, ( esp_gatt_char_prop_t ) xProperties, &xCharVal, &xControl );

    if( xESPstatus != ESP_OK )
    {
        xStatus = eBTStatusFail;
    }

    return xStatus;
}

BTStatus_t prvBTSetVal( BTGattResponse_t * pxValue )
{
    esp_err_t xESPstatus = ESP_OK;
    BTStatus_t xStatus = eBTStatusSuccess;

    xESPstatus = esp_ble_gatts_set_attr_value( pxValue->usHandle, pxValue->xAttrValue.xLen, pxValue->xAttrValue.pucValue );

    if( xESPstatus != ESP_OK )
    {
        xStatus = eBTStatusFail;
    }

    return xStatus;
}

BTStatus_t prvBTAddDescriptor( uint8_t ucServerIf,
                               uint16_t usServiceHandle,
                               BTUuid_t * pxUuid,
                               BTCharPermissions_t xPermissions )
{
    esp_bt_uuid_t xCharDescrUUID;
    esp_attr_value_t xCharDescrVal;
    esp_attr_control_t xControl;
    esp_err_t xESPstatus = ESP_OK;
    BTStatus_t xStatus = eBTStatusSuccess;

    prvCopytoESPUUID( &xCharDescrUUID, pxUuid );

    xCharDescrVal.attr_len = 0;
    xCharDescrVal.attr_max_len = 0;
    xCharDescrVal.attr_value = NULL;

    xControl.auto_rsp = ESP_GATT_RSP_BY_APP;

    xESPstatus = esp_ble_gatts_add_char_descr( usServiceHandle, &xCharDescrUUID, xPermissions, &xCharDescrVal, &xControl );

    if( xESPstatus != ESP_OK )
    {
        xStatus = eBTStatusFail;
    }

    return xStatus;
}

BTStatus_t prvBTStartService( uint8_t ucServerIf,
                              uint16_t usServiceHandle,
                              BTTransport_t xTransport )
{
    esp_err_t xESPstatus = ESP_OK;
    BTStatus_t xStatus = eBTStatusSuccess;

    xESPstatus = esp_ble_gatts_start_service( usServiceHandle );

    if( xESPstatus != ESP_OK )
    {
        xStatus = eBTStatusFail;
    }

    return xStatus;
}

BTStatus_t prvBTSendIndication( uint8_t ucServerIf,
                                uint16_t usAttributeHandle,
                                uint16_t usConnId,
                                size_t xLen,
                                uint8_t * pucValue,
                                bool bConfirm )
{
    esp_err_t xESPstatus = ESP_OK;
    BTStatus_t xStatus = eBTStatusSuccess;

    xESPstatus = esp_ble_gatts_send_indicate( ucServerIf, usConnId, usAttributeHandle, xLen, ( uint8_t * ) pucValue, bConfirm );

    if( xESPstatus != ESP_OK )
    {
        xStatus = eBTStatusFail;
    }

    return xStatus;
}

BTStatus_t prvBTSendResponse( uint16_t usConnId,
                              uint32_t ulTransId,
                              BTStatus_t xStatus,
                              BTGattResponse_t * pxResponse )
{
    esp_err_t xESPstatus = ESP_OK;
    BTStatus_t xReturnStatus = eBTStatusSuccess;
    /* Huge array allocate in the stack */

    esp_gatt_rsp_t rsp;

    rsp.handle = pxResponse->usHandle;
    rsp.attr_value.auth_req = pxResponse->xAttrValue.xRspErrorStatus;
    rsp.attr_value.handle = pxResponse->xAttrValue.usHandle;
    rsp.attr_value.len = pxResponse->xAttrValue.xLen;
    rsp.attr_value.offset = pxResponse->xAttrValue.usOffset;

    if( pxResponse->xAttrValue.xLen <= ESP_GATT_MAX_ATTR_LEN )
    {
        memcpy( rsp.attr_value.value, pxResponse->xAttrValue.pucValue, pxResponse->xAttrValue.xLen );

        xESPstatus = esp_ble_gatts_send_response( ulGattServerIFhandle, usConnId, ulTransId, xReturnStatus, &rsp );

        if( xESPstatus != ESP_OK )
        {
            xReturnStatus = eBTStatusFail;
        }
    }
    else
    {
        xReturnStatus = eBTStatusFail;
    }

    return xReturnStatus;
}

static BTStatus_t prvBTConfigureMtu( uint8_t ucServerIf,
                                     uint16_t usMtu )
{
    BTStatus_t xStatus = eBTStatusSuccess;
    esp_err_t xESPStatus;

    xESPStatus = esp_ble_gatt_set_local_mtu( usMtu );

    if( xESPStatus != ESP_OK )
    {
        xStatus = eBTStatusFail;
    }

    return xStatus;
}
